# rust-autism-image-detection

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
